kubernetes/test/chaos-mesh/chaos-mesh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-mesh
  namespace: chaos-mesh
  labels:
    app: chaos-mesh
spec:
  rules:
    - host: chaos-mesh.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chaos-dashboard
                port:
                  number: 2333
