kubernetes/test/chaos-mesh/chaos-mesh-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: chaos-testing
  labels:
    name: chaos-testing
